<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <TextView
            android:id="@+id/label_ssid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:clickable="false"
            android:text="@string/label_upc_enter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/label_upc"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/label_upc"
                android:gravity="center_vertical" />

            <AutoCompleteTextView
                android:id="@+id/manual_autotext"
                style="@style/BaseText"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:maxLength="9"
                android:singleLine="true"
                android:hint="@string/label_upc_placeholder"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/freqs"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <CheckBox android:id="@+id/radio_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/freq_24"/>
            <CheckBox android:id="@+id/radio_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/freq_5"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_info"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/vulnerability_info"
                android:id="@+id/vulnerability_info"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/router_models"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/if_not_working"
                android:id="@+id/not_working"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_manual_calc" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>